debug links /img na img

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="container">
                     <div class="header-menu">
                         <div class="header-menu_logo">
-                            <a href="#"><img src="/img/header/logo.svg" alt="#"></a>
+                            <a href="#"><img src="img/header/logo.svg" alt="#"></a>
                         </div>
                         <div class="header-menu_pag">
                             <ul class="header-menu_ul">
@@ -50,7 +50,7 @@
                 <div class="furniture-content">
                     <div class="furniture-content_title">
                         <h1 class="furniture-content_title-text">Transform Your Space with</h1>
-                        <h1 class="furniture-content_title-text">Exquisite Furniture <img src="/img/header/ic.svg" alt="#"></h1>
+                        <h1 class="furniture-content_title-text">Exquisite Furniture <img src="img/header/ic.svg" alt="#"></h1>
                     </div>
                     <div class="furniture-content_subtitle">
                         <span class="furniture-content_subtitle-text">Whether you're seeking a touch of sophistication or a cozy ambiance, our carefully curated range of furniture <br>pieces will captivate your senses and breathe new life into your home or office.</span>
@@ -64,7 +64,7 @@
             </div>
             <div class="furniture-bg">
                 <div class="furniture-bg_image">
-                    <img src="/img/header/bg.jpg" alt="#">
+                    <img src="img/header/bg.jpg" alt="#">
                 </div>
             </div>
         </div>
@@ -94,22 +94,22 @@
                         <div class="shop-content_items-item">
                             <span class="shop-content_items-item_subtitle">01 - Bedroom</span>
                             <h1 class="shop-content_items-item_title">Craft Mortar</h1>
-                            <img src="/img/shop/item_one.jpg" alt="#">
+                            <img src="img/shop/item_one.jpg" alt="#">
                         </div>
                         <div class="shop-content_items-item shop-content_items-item_length">
                             <span class="shop-content_items-item_subtitle">02 - Livingroom</span>
                             <h1 class="shop-content_items-item_title">Colored Collection</h1>
-                            <img src="/img/shop/item_two.jpg" alt="#">
+                            <img src="img/shop/item_two.jpg" alt="#">
                         </div>
                         <div class="shop-content_items-item shop-content_items-item_length">
                             <span class="shop-content_items-item_subtitle">03 - Bathroom</span>
                             <h1 class="shop-content_items-item_title">Loft Collection</h1>
-                            <img src="/img/shop/item_tree.jpg" alt="#">
+                            <img src="img/shop/item_tree.jpg" alt="#">
                         </div>
                         <div class="shop-content_items-item">
                             <span class="shop-content_items-item_subtitle">04 - Kitchen</span>
                             <h1 class="shop-content_items-item_title">Help To Cooking</h1>
-                            <img src="/img/shop/item_four.jpg" alt="#">
+                            <img src="img/shop/item_four.jpg" alt="#">
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                             <div class="swiper-slide product-content_slide">
                                 <div class="product-content_slide-item">
                                     <div class="product-content_slide-item_image">
-                                        <img src="/img/slider/slider_item_one.jpg" alt="#">
+                                        <img src="img/slider/slider_item_one.jpg" alt="#">
                                     </div>
                                     <div class="product-content_slide-item_name">Chair</div>
                                     <div class="product-content_slide-item_content">
@@ -146,7 +146,7 @@
                                 </div>
                                 <div class="product-content_slide-item">
                                     <div class="product-content_slide-item_image">
-                                        <img src="/img/slider/slider_item_two.jpg" alt="#">
+                                        <img src="img/slider/slider_item_two.jpg" alt="#">
                                     </div>
                                     <div class="product-content_slide-item_name">Lamp</div>
                                     <div class="product-content_slide-item_content">
@@ -159,7 +159,7 @@
                                 </div>
                                 <div class="product-content_slide-item">
                                     <div class="product-content_slide-item_image">
-                                        <img src="/img/slider/slider_item_tree.jpg" alt="#">
+                                        <img src="img/slider/slider_item_tree.jpg" alt="#">
                                     </div>
                                     <div class="product-content_slide-item_name">Swing Chair</div>
                                     <div class="product-content_slide-item_content">
@@ -172,7 +172,7 @@
                                 </div>
                                 <!-- <div class="product-content_slide-item">
                                     <div class="product-content_slide-item_image">
-                                        <img src="/img/slider/slider_item_four.jpg" alt="#">
+                                        <img src="img/slider/slider_item_four.jpg" alt="#">
                                     </div>
                                     <div class="product-content_slide-item_name">Swing Chair</div>
                                     <div class="product-content_slide-item_content">
@@ -185,7 +185,7 @@
                                 </div>
                                 <div class="product-content_slide-item">
                                     <div class="product-content_slide-item_image">
-                                        <img src="/img/slider/slider_item_five.jpg" alt="#">
+                                        <img src="img/slider/slider_item_five.jpg" alt="#">
                                     </div>
                                     <div class="product-content_slide-item_name">Swing Chair</div>
                                     <div class="product-content_slide-item_content">
@@ -200,7 +200,7 @@
                             <div class="swiper-slide product-content_slide">
                                 <div class="product-content_slide-item">
                                     <div class="product-content_slide-item_image">
-                                        <img src="/img/slider/slider_item_one.jpg" alt="#">
+                                        <img src="img/slider/slider_item_one.jpg" alt="#">
                                     </div>
                                     <div class="product-content_slide-item_name">Chair</div>
                                     <div class="product-content_slide-item_content">
@@ -213,7 +213,7 @@
                                 </div>
                                 <div class="product-content_slide-item">
                                     <div class="product-content_slide-item_image">
-                                        <img src="/img/slider/slider_item_two.jpg" alt="#">
+                                        <img src="img/slider/slider_item_two.jpg" alt="#">
                                     </div>
                                     <div class="product-content_slide-item_name">Lamp</div>
                                     <div class="product-content_slide-item_content">
@@ -226,7 +226,7 @@
                                 </div>
                                 <div class="product-content_slide-item">
                                     <div class="product-content_slide-item_image">
-                                        <img src="/img/slider/slider_item_tree.jpg" alt="#">
+                                        <img src="img/slider/slider_item_tree.jpg" alt="#">
                                     </div>
                                     <div class="product-content_slide-item_name">Swing Chair</div>
                                     <div class="product-content_slide-item_content">
@@ -241,7 +241,7 @@
                             <div class="swiper-slide product-content_slide">
                                 <div class="product-content_slide-item">
                                     <div class="product-content_slide-item_image">
-                                        <img src="/img/slider/slider_item_one.jpg" alt="#">
+                                        <img src="img/slider/slider_item_one.jpg" alt="#">
                                     </div>
                                     <div class="product-content_slide-item_name">Chair</div>
                                     <div class="product-content_slide-item_content">
@@ -254,7 +254,7 @@
                                 </div>
                                 <div class="product-content_slide-item">
                                     <div class="product-content_slide-item_image">
-                                        <img src="/img/slider/slider_item_two.jpg" alt="#">
+                                        <img src="img/slider/slider_item_two.jpg" alt="#">
                                     </div>
                                     <div class="product-content_slide-item_name">Lamp</div>
                                     <div class="product-content_slide-item_content">
@@ -267,7 +267,7 @@
                                 </div>
                                 <div class="product-content_slide-item">
                                     <div class="product-content_slide-item_image">
-                                        <img src="/img/slider/slider_item_tree.jpg" alt="#">
+                                        <img src="img/slider/slider_item_tree.jpg" alt="#">
                                     </div>
                                     <div class="product-content_slide-item_name">Swing Chair</div>
                                     <div class="product-content_slide-item_content">
@@ -294,14 +294,14 @@
                             <div class="browse-content_top-left_title"><h1>Browse By Type</h1></div>
                             <span class="browse-content_top-left_text">Our collection is a testament to our unwavering commitment to providing you with a diverse range of options, tailored to suit your unique tastes and preferences.</span>
                             <div class="browse-content_top-left_images">
-                                <img src="/img/browse/bad.svg" alt="#">
-                                <img src="/img/browse/stul.svg" alt="#">
-                                <img src="/img/browse/shkaf.svg" alt="#">
-                                <img src="/img/browse/stol.svg" alt="#">
+                                <img src="img/browse/bad.svg" alt="#">
+                                <img src="img/browse/stul.svg" alt="#">
+                                <img src="img/browse/shkaf.svg" alt="#">
+                                <img src="img/browse/stol.svg" alt="#">
                             </div>
                         </div>
                         <div class="browse-content_top-right">
-                            <div class="browse-content_top-right_bg"><img src="/img/browse/img_one.jpg" alt="#"></div>
+                            <div class="browse-content_top-right_bg"><img src="img/browse/img_one.jpg" alt="#"></div>
                             <div class="browse-content_top-right_items">
                                 <span class="browse-content_top-right_items-title">Table</span>
                                 <div class="browse-content_top-right_items-button">&#8594</div>
@@ -310,21 +310,21 @@
                     </div>
                     <div class="browse-content_bottom-items">
                         <div class="browse-content_bottom-item">
-                            <div class="browse-content_bottom-bg"><img src="/img/browse/img_two.jpg" alt="#" class="browse-content_bottom-bg_first"></div>
+                            <div class="browse-content_bottom-bg"><img src="img/browse/img_two.jpg" alt="#" class="browse-content_bottom-bg_first"></div>
                                 <div class="browse-content_bottom-action">
                                     <span class="browse-content_bottom-action_title">Seating</span>
                                     <div class="browse-content_bottom-action_button">&#8594</div>
                                 </div>
                         </div>
                         <div class="browse-content_bottom-item">
-                            <div class="browse-content_bottom-bg"><img src="/img/browse/img_three.jpg" alt="#"></div>
+                            <div class="browse-content_bottom-bg"><img src="img/browse/img_three.jpg" alt="#"></div>
                                 <div class="browse-content_bottom-action">
                                     <span class="browse-content_bottom-action_title">Storage</span>
                                     <div class="browse-content_bottom-action_button">&#8594</div>
                                 </div>
                         </div>
                         <div class="browse-content_bottom-item ">
-                            <div class="browse-content_bottom-bg"><img src="/img/browse/img_four.jpg" alt="#" class="browse-content_bottom-bg_last"></div>
+                            <div class="browse-content_bottom-bg"><img src="img/browse/img_four.jpg" alt="#" class="browse-content_bottom-bg_last"></div>
                                 <div class="browse-content_bottom-action">
                                     <span class="browse-content_bottom-action_title">Sofa</span>
                                     <div class="browse-content_bottom-action_button">&#8594</div>
@@ -339,7 +339,7 @@
     <section class="section-price">
         <div class="price">
             <div class="price-content_top">
-                <div class="price-content_bg"><img src="/img/price/img_one.jpg" alt="#">
+                <div class="price-content_bg"><img src="img/price/img_one.jpg" alt="#">
                     <div class="price-content_top-items">
                         <div class="price-content_top-item price-content_top-item_left">
                             <div class="price-content_top-item_plus">&#43</div>
@@ -388,21 +388,21 @@
                         <div class="price-content_bottom-content_right">
                             <div class="price-content_bottom-content_right-items">
                                 <div class="price-content_bottom-content_right-item">
-                                    <div class="price-content_bottom-content_right-item_image"><img src="/img/price/svg_one.svg" alt="#"></div>
+                                    <div class="price-content_bottom-content_right-item_image"><img src="img/price/svg_one.svg" alt="#"></div>
                                     <div class="price-content_bottom-content_right-item_text">
                                         <div class="price-content_bottom-content_right-item_text-title">24/7 Supports</div>
                                         <div class="price-content_bottom-content_right-item_text-subtitle">24/7 support means a support service that is provided 24 hours a day and 7 days a week. </div>
                                     </div>
                                 </div>
                                 <div class="price-content_bottom-content_right-item">
-                                    <div class="price-content_bottom-content_right-item_image"><img src="/img/price/svg_two.svg" alt="#"></div>
+                                    <div class="price-content_bottom-content_right-item_image"><img src="img/price/svg_two.svg" alt="#"></div>
                                     <div class="price-content_bottom-content_right-item_text">
                                         <div class="price-content_bottom-content_right-item_text-title">24/7 Supports</div>
                                         <div class="price-content_bottom-content_right-item_text-subtitle">24/7 support means a support service that is provided 24 hours a day and 7 days a week. </div>
                                     </div>
                                 </div>
                                 <div class="price-content_bottom-content_right-item">
-                                    <div class="price-content_bottom-content_right-item_image"><img src="/img/price/svg_tree.svg" alt="#"></div>
+                                    <div class="price-content_bottom-content_right-item_image"><img src="img/price/svg_tree.svg" alt="#"></div>
                                     <div class="price-content_bottom-content_right-item_text">
                                         <div class="price-content_bottom-content_right-item_text-title">24/7 Supports</div>
                                         <div class="price-content_bottom-content_right-item_text-subtitle">24/7 support means a support service that is provided 24 hours a day and 7 days a week. </div>
