--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
             </div>
         </div>
     </section>
-    <script src="/js/jquery-3.5.1.min.js"></script>
-    <script src="/js/swiper-bundle.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
