revision section price

--- a/index.html
+++ b/index.html
@@ -397,19 +397,21 @@
                                 <div class="price-content_bottom-content_right-item">
                                     <div class="price-content_bottom-content_right-item_image"><img src="img/price/svg_two.svg" alt="#"></div>
                                     <div class="price-content_bottom-content_right-item_text">
-                                        <div class="price-content_bottom-content_right-item_text-title">24/7 Supports</div>
-                                        <div class="price-content_bottom-content_right-item_text-subtitle">24/7 support means a support service that is provided 24 hours a day and 7 days a week. </div>
+                                        <div class="price-content_bottom-content_right-item_text-title">Free Consultation</div>
+                                        <div class="price-content_bottom-content_right-item_text-subtitle">A free consultation is a one-on-one interaction or conversation given freely to share one's thoughts and discuss possible  </div>
                                     </div>
                                 </div>
                                 <div class="price-content_bottom-content_right-item">
                                     <div class="price-content_bottom-content_right-item_image"><img src="img/price/svg_tree.svg" alt="#"></div>
                                     <div class="price-content_bottom-content_right-item_text">
-                                        <div class="price-content_bottom-content_right-item_text-title">24/7 Supports</div>
-                                        <div class="price-content_bottom-content_right-item_text-subtitle">24/7 support means a support service that is provided 24 hours a day and 7 days a week. </div>
+                                        <div class="price-content_bottom-content_right-item_text-title">Overall Guarantee</div>
+                                        <div class="price-content_bottom-content_right-item_text-subtitle">The comprehensive guarantee is required for import, warehousing, transit, processing and specific use.  </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        <div class="price-content_bottom-content_gravity price-content_bottom-content_gravity-top"></div>
+                        <div class="price-content_bottom-content_gravity price-content_bottom-content_gravity-bottom"></div>
                     </div>
                 </div>
             </div>
