create section customer

--- a/index.html
+++ b/index.html
@@ -417,6 +417,94 @@
             </div>
         </div>
     </section>
+    <section class="section-customer">
+        <div class="customer">
+            <div class="container">
+                <div class="customer-content">
+                    <div class="customer-content_title"><h1>What Our Customer Say</h1></div>
+                    <div class="swiper-container customer-content_sliders">
+                        <div class="swiper-wrapper customer-content_slider">
+                            <div class="swiper-slide">
+                                <div class="customer-content_slide">
+                                    <div class="customer-content_slide-avatar"><img src="img/customer/avatar.jpg" alt="#"></div>
+                                    <div class="customer-content_slide-description">
+                                        <div class="customer-content_slide-description_name">
+                                            <div class="customer-content_slide-description_ratings">
+                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating"></div>
+                                            </div>
+                                            <div class="customer-content_slide-description_names">Darren Dunlap</div>
+                                            <div class="customer-content_slide-description_prof">CEO & Founder</div>
+                                        </div>
+                                        <div class="customer-content_slide-description_elem">
+                                            <img src="img/customer/elem.svg" alt="#">
+                                        </div>
+                                        <div class="customer-content_slide-description_text">
+                                            “One of my favorite features is the watch's water resistance. I love being able to wear it while swimming or participating in water sports without worrying about damage.”
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="customer-content_slide">
+                                    <div class="customer-content_slide-avatar"><img src="img/customer/avatar.jpg" alt="#"></div>
+                                    <div class="customer-content_slide-description">
+                                        <div class="customer-content_slide-description_name">
+                                            <div class="customer-content_slide-description_ratings">
+                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating"></div>
+                                            </div>
+                                            <div class="customer-content_slide-description_names">Darren Dunlap</div>
+                                            <div class="customer-content_slide-description_prof">CEO & Founder</div>
+                                        </div>
+                                        <div class="customer-content_slide-description_elem">
+                                            <img src="img/customer/elem.svg" alt="#">
+                                        </div>
+                                        <div class="customer-content_slide-description_text">
+                                            “One of my favorite features is the watch's water resistance. I love being able to wear it while swimming or participating in water sports without worrying about damage.”
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="customer-content_slide">
+                                    <div class="customer-content_slide-avatar"><img src="img/customer/avatar.jpg" alt="#"></div>
+                                    <div class="customer-content_slide-description">
+                                        <div class="customer-content_slide-description_name">
+                                            <div class="customer-content_slide-description_ratings">
+                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating"></div>
+                                            </div>
+                                            <div class="customer-content_slide-description_names">Darren Dunlap</div>
+                                            <div class="customer-content_slide-description_prof">CEO & Founder</div>
+                                        </div>
+                                        <div class="customer-content_slide-description_elem">
+                                            <img src="img/customer/elem.svg" alt="#">
+                                        </div>
+                                        <div class="customer-content_slide-description_text">
+                                            “One of my favorite features is the watch's water resistance. I love being able to wear it while swimming or participating in water sports without worrying about damage.”
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="customer-content_sliders-pagination">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
