--- a/index.html
+++ b/index.html
@@ -430,11 +430,13 @@
                                     <div class="customer-content_slide-description">
                                         <div class="customer-content_slide-description_name">
                                             <div class="customer-content_slide-description_ratings">
-                                                <div class="customer-content_slide-description_rating"></div>
-                                                <div class="customer-content_slide-description_rating"></div>
-                                                <div class="customer-content_slide-description_rating"></div>
-                                                <div class="customer-content_slide-description_rating"></div>
-                                                <div class="customer-content_slide-description_rating"></div>
+                                                <div class="customer-content_slide-description_rating">
+                                                    <img src="img/customer/star.svg" alt="#">
+                                                </div>
+                                                <div class="customer-content_slide-description_rating"><img src="img/customer/star.svg" alt="#"></div>
+                                                <div class="customer-content_slide-description_rating"><img src="img/customer/star.svg" alt="#"></div>
+                                                <div class="customer-content_slide-description_rating"><img src="img/customer/star.svg" alt="#"></div>
+                                                <div class="customer-content_slide-description_rating"><img src="img/customer/star.svg" alt="#"></div>
                                             </div>
                                             <div class="customer-content_slide-description_names">Darren Dunlap</div>
                                             <div class="customer-content_slide-description_prof">CEO & Founder</div>
