create & fixed bags

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         </div>
                     </div>
                     <div class="browse-content_bottom-items">
-                        <div class="browse-content_bottom-item">
+                        <div class="browse-content_bottom-item browse-content_bottom-bg_first">
                             <div class="browse-content_bottom-bg"><img src="img/browse/img_two.jpg" alt="#" class="browse-content_bottom-bg_first"></div>
                                 <div class="browse-content_bottom-action">
                                     <span class="browse-content_bottom-action_title">Seating</span>
@@ -323,7 +323,7 @@
                                     <div class="browse-content_bottom-action_button">&#8594</div>
                                 </div>
                         </div>
-                        <div class="browse-content_bottom-item ">
+                        <div class="browse-content_bottom-item browse-content_bottom-bg_last">
                             <div class="browse-content_bottom-bg"><img src="img/browse/img_four.jpg" alt="#" class="browse-content_bottom-bg_last"></div>
                                 <div class="browse-content_bottom-action">
                                     <span class="browse-content_bottom-action_title">Sofa</span>
@@ -500,12 +500,49 @@
                             </div>
                         </div>
                     </div>
-                    <div class="customer-content_sliders-pagination">
-
-                    </div>
+                    <div class="customer-content_sliders-navigation customer-content_sliders-navigation_left">&#10094</div>
+                    <div class="customer-content_sliders-pagination"></div>
+                    <div class="customer-content_sliders-navigation customer-content_sliders-navigation_right">&#10095</div>
                 </div>
             </div>
         </div>
+    </section>
+    <section class="section-footer">
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-content_left">
+                        <a href="#" class="footer-content_left-logo"><img src="img/header/logo.svg" alt="#"></a>
+                        <div class="footer-content_left-contacts">
+                            <div class="footer-content_left-contacts_left">
+                                <div class="footer-content_left-contacts_left-email">couchly@xyz.com</div>
+                                <div class="footer-content_left-contacts_left-tel">+1 123 456 7890</div>
+                            </div>
+                            <div class="footer-content_left-contacts_right">
+                                <div class="footer-content_left-contacts_right-street">115 Cedar Rapids,</div>
+                                <div class="footer-content_left-contacts_right-states">IA 52404, United States</div>
+                            </div>
+                        </div>
+                        <div class="footer-content_left-copyright">© 2023 Copyright Couchly</div>
+                    </div>
+                    <div class="footer-content_right">
+                        <div class="footer-content_right-title"><h1>Ready To Work With Us?</h1></div>
+                        <div class="footer-content_right-text">At Couchly, we're thrilled to embark on a collaborative journey with you. If you're seeking exceptional craftsmanship, innovative solutions, and personalized attention, then you've come to the right place</div>
+                        <button class="footer-content_right-button">Contact Us &#8594</button>
+                        <span class="footer-content_right-line"></span>
+                        <div class="footer-content_right-soc">
+                            <a href="#" class="footer-content_right-soc_inst">Instagram.</a>
+                            <a href="#" class="footer-content_right-soc_fb">Facebook.</a>
+                            <a href="#" class="footer-content_right-soc_ld">Linkedin.</a>
+                        </div>
+                        <div class="footer-content_right-policy">
+                            <div class="footer-content_right-policy_privacy">Privacy Policy</div>
+                            <div class="footer-content_right-policy_lang">EN</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </section>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
