--- a/index.html
+++ b/index.html
@@ -524,6 +524,8 @@
                             </div>
                         </div>
                         <div class="footer-content_left-copyright">© 2023 Copyright Couchly</div>
+                        <div class="footer-content_item footer-content_item-top"></div>
+                        <div class="footer-content_item footer-content_item-right"></div>
                     </div>
                     <div class="footer-content_right">
                         <div class="footer-content_right-title"><h1>Ready To Work With Us?</h1></div>
