--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                                 </a>
                             </ul>
                         </div>
-                        <div class="header-menu_button">
-                            <a href="#" class="header-menu_button-link">Log In</a>
-                        </div>
+                        <button class="header-menu_button">
+                            Log In
+                        </button>
                     </div>
                 </div>
             </header>
@@ -75,7 +75,7 @@
                 <div class="mission-content">
                     <div class="mission-content_left">
                         <h1 class="mission-content_left-title">Mission Is The Best <br>Dedicated For You</h1>
-                        <a href="#" class="mission-content_left-link">Learn More &#8594</a>
+                        <button href="#" class="mission-content_left-button">Learn More &#8594</button>
                     </div>
                     <div class="mission-content_right">
                         <span class="mission-content_right-text">Discover a world of exceptional furniture that perfectly aligns with your personal style and needs. At Mission, we take pride in our unwavering commitment to crafting furniture pieces that cater to your unique tastes and preferences. Whether you desire contemporary elegance, timeless classics, or sleek modern designs, our dedicated team is here to bring your vision to life.</span>
@@ -291,7 +291,7 @@
                 <div class="browse-content">
                     <div class="browse-content_top">
                         <div class="browse-content_top-left">
-                            <div class="browse-content_top-left_title"><h1>Browse By Type</h1></div>
+                            <div class="browse-content_top-left_title"><h1 class="browse-content_top-left_title-text">Browse By Type</h1></div>
                             <span class="browse-content_top-left_text">Our collection is a testament to our unwavering commitment to providing you with a diverse range of options, tailored to suit your unique tastes and preferences.</span>
                             <div class="browse-content_top-left_images">
                                 <img src="img/browse/bad.svg" alt="#">
@@ -334,7 +334,6 @@
                 </div>
             </div>
         </div>
-    
     </section>
     <section class="section-price">
         <div class="price">
@@ -421,7 +420,7 @@
         <div class="customer">
             <div class="container">
                 <div class="customer-content">
-                    <div class="customer-content_title"><h1>What Our Customer Say</h1></div>
+                    <div class="customer-content_title"><h1 class="customer-content_title-text">What Our Customer Say</h1></div>
                     <div class="swiper-container customer-content_sliders">
                         <div class="swiper-wrapper customer-content_slider">
                             <div class="swiper-slide">
@@ -528,7 +527,7 @@
                         <div class="footer-content_item footer-content_item-right"></div>
                     </div>
                     <div class="footer-content_right">
-                        <div class="footer-content_right-title"><h1>Ready To Work With Us?</h1></div>
+                        <div class="footer-content_right-title"><h1 class="footer-content_right-title_text">Ready To Work With Us?</h1></div>
                         <div class="footer-content_right-text">At Couchly, we're thrilled to embark on a collaborative journey with you. If you're seeking exceptional craftsmanship, innovative solutions, and personalized attention, then you've come to the right place</div>
                         <button class="footer-content_right-button">Contact Us &#8594</button>
                         <span class="footer-content_right-line"></span>
